# Wispering

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: prepare-dev-port.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs
